# magnetrun-claude

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
docs/: conf.py
examples/: advanced_analysis.py  basic_usage.py
magnetrun/: __init__.py  _version.py  exceptions.py
magnetrun/cli/: __init__.py  analysis.py  commands.py  etl.py  field_commands.py  formats.py  info.py  main.py  plotting.py  processing.py  selection.py  utils.py
magnetrun/config/: __init__.py  housing_configs.py  m9.json
magnetrun/config/configs/formats/: bprofile.json
magnetrun/config/configs/housings/: m9.json
magnetrun/core/: __init__.py  base_data.py  magnet_data.py  magnet_run.py  pandas_data.py  tdms_data.py  units.py
magnetrun/core/fields/: __init__.py  field.py  field_types.py  format_definition.py  format_registry.py  utils.py
magnetrun/formats/: __init__.py  bprofile_data.py  centralized_config.py  format_definition.py  pigbrother_data.py  pupitre_data.py  registry.py
magnetrun/formats/configs/: pigbrother.json  pupitre.json
magnetrun/formats/configs/formats/: pupitre.json
magnetrun/io/: __init__.py  base_reader.py  bprofile_reader.py  format_detector.py  pigbrother_reader.py  pupitre_reader.py  readers.py  writers.py
magnetrun/processing/: analysis.py  cleaning.py  plateaux.py  smoothers.py  time_operations.py
magnetrun/utils/: __init__.py  duplicates.py
magnetrun/visualization/: __init__.py  breakpoint_plotter.py  plotters.py
tests/: __init__.py  conftest.py  core.py  simple_test_imports.py  test_core.py  test_imports.py  test_io.py  test_processing.py
tests/test_core/: test_magnet_data.py
tests/test_visualization/: test_plotters.py.todebug
